--- a/src/components/Quiz/Quiz.module.scss
+++ b/src/components/Quiz/Quiz.module.scss
@@ -1,10 +1,24 @@
 .Quiz {
+  position: relative;
   & > p {
     display: flex;
     justify-content: space-between;
     align-items: center;
     & strong {
       font-size: 2rem;
+    }
+  }
+  & > button {
+    position: absolute;
+    height: 3rem;
+    width: 100%;
+    left: 0;
+    bottom: -3.5rem;
+    background-color: #ccc;
+    font-weight: bold;
+    color: #000;
+    &:hover {
+      color: #fff;
     }
   }
 }
